// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Item snapshots > matches snapshot — ItemMedia image variant 1`] = `
<div
  class="group/item [a]:hover:bg-collection-row-hover/50 focus-visible:border-ring focus-visible:ring-ring/50 [a]:transition-colors flex flex-wrap items-center rounded-md border border-transparent text-sm outline-none transition-colors duration-100 focus-visible:ring-[3px] bg-transparent gap-4 p-4"
  data-size="default"
  data-slot="item"
  data-variant="default"
>
  <div
    class="flex shrink-0 items-center justify-center gap-2 group-has-[[data-slot=item-description]]/item:translate-y-0.5 group-has-[[data-slot=item-description]]/item:self-start [&_svg]:pointer-events-none size-10 overflow-hidden rounded-sm [&_img]:size-full [&_img]:object-cover"
    data-slot="item-media"
    data-variant="image"
  >
    <img
      alt="cover"
      src="https://placehold.co/40"
    />
  </div>
  <div
    class="flex flex-1 flex-col gap-1 [&+[data-slot=item-content]]:flex-none"
    data-slot="item-content"
  >
    <div
      class="flex w-fit items-center gap-2 text-sm font-medium leading-snug"
      data-slot="item-title"
    >
      With image
    </div>
  </div>
</div>
`;

exports[`Item snapshots > matches snapshot — default 1`] = `
<div
  class="group/item [a]:hover:bg-collection-row-hover/50 focus-visible:border-ring focus-visible:ring-ring/50 [a]:transition-colors flex flex-wrap items-center rounded-md border border-transparent text-sm outline-none transition-colors duration-100 focus-visible:ring-[3px] bg-transparent gap-4 p-4"
  data-size="default"
  data-slot="item"
  data-variant="default"
>
  <div
    class="flex flex-1 flex-col gap-1 [&+[data-slot=item-content]]:flex-none"
    data-slot="item-content"
  >
    <div
      class="flex w-fit items-center gap-2 text-sm font-medium leading-snug"
      data-slot="item-title"
    >
      Title
    </div>
    <p
      class="text-collection-text-secondary line-clamp-2 text-balance text-sm font-normal leading-normal [&>a:hover]:text-foreground [&>a]:underline [&>a]:underline-offset-4"
      data-slot="item-description"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`Item snapshots > matches snapshot — muted variant 1`] = `
<div
  class="group/item [a]:hover:bg-collection-row-hover/50 focus-visible:border-ring focus-visible:ring-ring/50 [a]:transition-colors flex flex-wrap items-center rounded-md border border-transparent text-sm outline-none transition-colors duration-100 focus-visible:ring-[3px] bg-collection-row-muted/50 gap-4 p-4"
  data-size="default"
  data-slot="item"
  data-variant="muted"
>
  <div
    class="flex flex-1 flex-col gap-1 [&+[data-slot=item-content]]:flex-none"
    data-slot="item-content"
  >
    <div
      class="flex w-fit items-center gap-2 text-sm font-medium leading-snug"
      data-slot="item-title"
    >
      Muted
    </div>
  </div>
</div>
`;

exports[`Item snapshots > matches snapshot — outline small 1`] = `
<div
  class="group/item [a]:hover:bg-collection-row-hover/50 focus-visible:border-ring focus-visible:ring-ring/50 [a]:transition-colors flex flex-wrap items-center rounded-md border text-sm outline-none transition-colors duration-100 focus-visible:ring-[3px] border-collection-border gap-2.5 px-4 py-3"
  data-size="sm"
  data-slot="item"
  data-variant="outline"
>
  <div
    class="flex flex-1 flex-col gap-1 [&+[data-slot=item-content]]:flex-none"
    data-slot="item-content"
  >
    <div
      class="flex w-fit items-center gap-2 text-sm font-medium leading-snug"
      data-slot="item-title"
    >
      Title
    </div>
  </div>
</div>
`;
